--- a/arch-linux/PKGBUILD
+++ b/arch-linux/PKGBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Dmitry Shintyakov <shintyakov@gmail.com>
 
-pkgname=pick_geometry
+pkgname=pick-geometry-git
 pkgver=1.0
 pkgver() {
   cd "$srcdir/$pkgname"
   if ! git describe --tags 2>/dev/null; then
-    echo "0.r$(git rev-list --count HEAD).g$(git rev-parse --short HEAD)"
+    echo "1.0.r$(git rev-list --count HEAD).g$(git rev-parse --short HEAD)"
   fi | sed 's/-/.r/; s/-/./g'
 }
 pkgrel=1
@@ -18,7 +18,7 @@ license=('MIT')
 arch=('any')
 source=("$pkgname::git+https://github.com/dmishin/pick-geometry.git")
 md5sums=(SKIP)
-provides=(pick_geometry)
+provides=(pick-geometry)
 conflicts=()
 replaces=()
 
